[project]
name = "mazda-wsm"
version = "0.1.0"
description = " Download Workshop Manuals for your Mazda, and serve them as beautiful, searchable websites using MkDocs!"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "bs4>=0.0.2",
    "httpx>=0.28.1",
    "markdown-grids>=1.0.0",
    "markdownify>=1.1.0",
    "mkdocs>=1.6.1",
    "mkdocs-terminal>=4.7.0",
    "python-slugify>=8.0.4",
    "pyyaml>=6.0.2",
]
